<resources>
    <string name="app_name">Kinedu</string>

    <!--Bottom Navigation-->
    <string name="title_my_family">My Family</string>
    <string name="title_my_plan">My Plan</string>
    <string name="title_catalogue">Catalog</string>
    <string name="title_progress">Progress</string>
    <string name="title_milestones">Milestones</string>

    <!-- Generic-->
    <string name="image_desc">image_desc</string>

    <!--Catalogue-->
    <string name="tab_text_activities">Activities</string>
    <string name="tab_text_articles">Articles</string>
    <string name="question_how_is_doing">How is fwefew doing in this skill?</string>
    <string name="label_learn_more">Learn more</string>
    <string name="label_retry">Retry</string>
    <string name="msg_learn_more_click">Studies suggest that approximately 50% of babies begin crawling by 8 months.</string>
    <string name="msg_no_internet_error">No Internet Connection</string>
    <string name="title_crawling">Crawling</string>
    <string name="msg_error">Ha ocurrido un erro</string>
    <string name="label_no_articles">No articles for this age found</string>
    <string name="label_no_activities">No activities for this age found</string>
</resources>