<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_my_family"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_my_family" />

    <item
        android:id="@+id/navigation_my_plan"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_my_plan" />

    <item
        android:id="@+id/navigation_catalogue"
        android:icon="@drawable/ic_exercises"
        android:title="@string/title_catalogue" />

    <item
        android:id="@+id/navigation_progress"
        android:icon="@drawable/ic_assessment_black"
        android:title="@string/title_progress" />

    <item
        android:id="@+id/navigation_milestones"
        android:icon="@drawable/ic_milestones"
        android:title="@string/title_milestones" />
</menu>
